# coop_sl

./: .backup_old_woodpecker.yml  .gitignore  .pre-commit-config.yml  .woodpecker.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE.md  README.md  build_desktop.sh
.reuse/: dep5
apps/co_calc/: Cargo.toml  README.md
apps/co_calc/ui/: appwindow.slint
apps/co_chat/: Cargo.toml  README.md  build.rs  index.html
apps/co_chat/src/: main.rs
apps/co_chat/ui/: app.slint  app_side_bar.slint
apps/co_files/: Cargo.toml  README.md
apps/co_files/src/: main.rs
apps/co_files/ui/: appwindow.slint
apps/coop_chat/: Cargo.toml  README.md  build.rs  index.html
apps/coop_chat/src/: controller.rs  main.rs  mocks.rs  view_controller.rs
apps/coop_chat/src/controller/: side_bar_controller.rs
apps/coop_chat/src/mocks/: mock_side_bar_controller.rs
apps/coop_chat/src/view_controller/: side_bar_view_controller.rs
apps/coop_chat/ui/: app.slint  message-view.slint  message_view.slint  side-bar-view.slint  side_bar_view.slint
apps/coop_chat/ui/_imports/: co_widgets.slint  coop-widgets.slint  coop_widgets.slint
apps/coop_local/: Cargo.toml  README.md  build.rs
apps/coop_local/assets/: 256x256.png.license
apps/coop_local/src/: adapters.rs  callback.rs  controller.rs  controllers.rs  gamepad.rs  item_selector.rs  lib.rs  main.rs  model.rs  models.rs  proxy_model.rs  proxy_models.rs  repositories.rs  repository.rs  service.rs  ui.rs
apps/coop_local/src/adapters/: bookmarks_adapter.rs  files_adapter.rs  games_adapter.rs  image_adapter.rs  text_editor_adapter.rs
apps/coop_local/src/controller/: dialog_view_controller.rs  files_controller.rs  games_controller.rs  items_view_controller.rs  side_bar_controller.rs
apps/coop_local/src/controllers/: bookmarks_controller.rs  dialog_controller.rs  files_controller.rs  games_controller.rs  image_controller.rs  text_controller.rs  text_editor_controller.rs
apps/coop_local/src/model/: bookmark_model.rs  file_model.rs  game_model.rs  item_model.rs
apps/coop_local/src/models/: bookmark_model.rs  file_model.rs  game_model.rs  text_editor_model.rs  text_model.rs
apps/coop_local/src/proxy_models/: bookmarks_proxy_model.rs  files_proxy_model copy.rs  files_proxy_model.rs  games_proxy_model.rs
apps/coop_local/src/repositories/: bookmarks_repository.rs  bookmarks_repository_mock.rs  file_repository.rs  games_repository.rs  image_repository.rs  text_editor_repository.rs  text_editor_repository_mock.rs  text_repository.rs  traits.rs
apps/coop_local/ui/: main-window.slint  views.slint
apps/pico_os/: Cargo.toml  README.md
apps/pico_os/src/: main.rs
apps/pico_os/ui/: appwindow.slint
display/coop_client/: Cargo.toml  README.md
display/coop_client/src/: lib.rs
display/coop_protocol/: Cargo.toml  README.md
display/coop_protocol/src/: lib.rs
display/coop_server/: Cargo.toml  README.md
display/coop_server/src/: lib.rs  proxy.rs  result.rs
examples/desktop/: Cargo.toml  build.rs
examples/desktop/src/: main.rs  view_controller.rs
examples/desktop/ui/: app.slint  header-bar.slint  header_bar.slint  launcher.slint  login.slint
examples/gallery/: Cargo.toml  build.rs  index.html
examples/gallery/src/: main.rs
examples/gallery/ui/: app-manager.slint  app.slint  pages.slint  side-bar-view.slint
examples/gaming/: Cargo.toml  build.rs
examples/gaming/game/: game.slint
examples/gaming/src/: main.rs
examples/gaming/ui/: game.slint
examples/pico_os/: Cargo.toml  build.rs  index.html
examples/pico_os/src/: main.rs
examples/pico_os/ui/: desktop.slint  login.slint  os.slint  os_controller.slint
examples/platform_support/: Cargo.toml  build.rs
examples/platform_support/ui/: platforms.slint
examples/widgets/: Cargo.toml  build.rs  index.html
examples/widgets/src/: main.rs
examples/widgets/ui/: app.slint  app_manager.slint  app_side_bar.slint  book_flip.slint  settings.slint  side_bar_view.slint  widgets.slint
examples/widgets_psp/: Cargo.toml  build.rs  rust-toolchain.toml
examples/widgets_psp/.cargo/: config.toml
examples/widgets_psp/src/: main.rs
gaming/pico_ecs/: Cargo.toml  README.md
gaming/pico_ecs/src/: lib.rs
gaming/pico_engine/: Cargo.toml  README.md
gaming/pico_engine/src/: lib.rs
gaming/pico_engine_rs/: Cargo.toml
gaming/pico_engine_rs/src/: display.rs  draw_context.rs  lib.rs
gaming/pico_engine_ui/: Cargo.toml  README.md  build.rs
gaming/pico_engine_ui/ui/: color_button.slint  color_picker.slint  draw_context.slint  lib.slint  sprite.slint  sprite_editor.slint  sprite_setter.slint
internal/shared/: Cargo.toml
internal/shared/src/: lib.rs
platform_support/slint_coop/: Cargo.toml  README.md
platform_support/slint_coop/src/: color.rs  event_reader.rs  lib.rs  platform.rs
platform_support/slint_orbclient/: Cargo.toml  README.md
platform_support/slint_orbclient/src/: color.rs  event_reader.rs  lib.rs  platform.rs
platform_support/slint_psp/: Cargo.toml  README.md
platform_support/slint_psp/src/: color.rs  event_reader.rs  events.rs  lib.rs  platform.rs
platform_support/slint_redox/: Cargo.toml  README.md
platform_support/slint_redox/src/: color.rs  platform.rs
platform_support/slint_rpi_pico/: Cargo.toml
platform_support/slint_rpi_pico/src/: lib.rs
widgets/book_flip/: Cargo.toml  README.md  build.rs
widgets/book_flip/src/: docs.rs  lib.rs
widgets/book_flip/ui/: _widgets.md  book-page.slint  book.slint  book_page.slint  lib.slint  text-page.slint  text_page.slint
widgets/co_widgets/: Cargo.toml  Changelog.md  README.md  build.rs  co_widgets.slint
widgets/co_widgets/co_widgets/: co_widgets.slint
widgets/co_widgets/src/: docs.rs  lib.rs
widgets/co_widgets/ui/: lib.slint
widgets/coop_widgets/: Cargo.toml  Changelog.md  README.md  build.rs
widgets/coop_widgets/docs/: book.toml
widgets/coop_widgets/src/: docs.rs  lib.rs
widgets/coop_widgets/ui/: base-widgets.slint  building-blocks.slint  components.slint  delegates.slint  enums.slint  extensions.slint  keyboard.slint  layouts.slint  lib.slint  structs.slint  styling.slint  widgets.slint
(+400 files in other folders)
