# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[workspace]
members = [
   "apps/co_calc",
   "apps/co_files",
   "apps/pico_os",
   "examples/gaming",
   "examples/widgets",
   "gaming/pico_engine",
   "gaming/pico_ecs",
   "gaming/pico_designer",
   "platform_support/slint_orbclient",
   "widgets/book_flip",
   "widgets/co_widgets",
   "internal/shared",
   "internal/platforms_support",
]

default-members = [
   "apps/co_calc",
   "apps/co_files",
   "apps/pico_os",
   "examples/gaming",
   "examples/widgets",
   "gaming/pico_engine",
   "gaming/pico_ecs",
   "gaming/pico_designer",
   "platform_support/slint_orbclient",
   "widgets/book_flip",
   "widgets/co_widgets",
   "internal/shared",
   "internal/platforms_support",
]

exclude = [
 "platform_support/slint_psp",
 "examples/widgets_psp",
]

resolver="2"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"