# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[workspace]
members = [
   "apps/coop_local",
   "display/coop_client",
   "display/coop_protocol",
   "display/coop_server",
   "examples/desktop",
   "examples/gallery",
   "platform_support/slint_coop",
   "widgets/book_flip",
   "widgets/coop_widgets",
   "internal/shared",
   "internal/platforms_support"
]

default-members = [
   "apps/coop_local",
   "examples/gallery",
   "widgets/book_flip",
   "widgets/coop_widgets",
   "internal/shared",
   "internal/platforms_support"
]

exclude = [
 "examples/widgets_psp",
]

resolver="2"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"