[package]
name = "co_chat"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3"

[build-dependencies]
slint-build = "0.3"

# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/ #wasm# //" to generate the wasm build.

 #wasm# [lib]
 #wasm# crate-type = ["cdylib"]
 #wasm# path = "src/main.rs"

 #wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
 #wasm# wasm-bindgen = { version = "0.2" }
 #wasm# web-sys = { version = "0.3", features=["console"] }
 #wasm# console_error_panic_hook = "0.1.5"