# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "co_files"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.1"

[build-dependencies]
slint-build = "0.3.1"
