# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "coop_chat"
version = "0.1.0"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
edition = "2021"
build = "build.rs"
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

[[bin]]
path = "src/main.rs"
name = "coop_chat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.2"

[build-dependencies]
slint-build = "0.3.2"
coop_widgets = { path = "../../widgets/coop_widgets" }

# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/ #wasm# //" to generate the wasm build.

 #wasm# [lib]
 #wasm# crate-type = ["cdylib"]
 #wasm# path = "src/main.rs"

 #wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
 #wasm# wasm-bindgen = { version = "0.2" }
 #wasm# web-sys = { version = "0.3", features=["console"] }
 #wasm# console_error_panic_hook = "0.1.5"