# SPDX-FileCopyrightText: 2023 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "coop_local"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
description = "Cross platform file browser."
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

[[bin]]
path = "src/main.rs"
name = "coop_local"

[dependencies]
slint = { version = "1.2.0", default-features = false, features = ["compat-1-2"] }
tokio = { version = "1", features = ["full"] }

# save and load settings
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.4"

# file helper crates
trash = "3.0.2"
open = "4"
dirs = "5.0.1"
fs_at = "0.1"
image = "0.24.6"

# games
tauri-icns = { version = "0.1.0", optional = true }
chrono = { version = "0.4.26", optional = true }

[build-dependencies]
slint-build = { version = "1.2.0" }
coop_widgets = { path = "../../widgets/coop_widgets" }

[features]
default = ["slint/std", "slint/backend-winit", "slint/renderer-winit-femtovg", "slint/accessibility", "games"]
mock = []

# activate builtin games launcher
games = ["tauri-icns", "chrono"]

[package.metadata.bundle]
name = "coop_local"
identifier = "org.flovansl.coop_local"
icon = ["assets/256x256.png"]
version = "0.0.1"
copyright = "Copyright (c) Florian Blasius 2023. All rights reserved."
short_description = "Cross platform file browser."