# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "coop_client"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Client library that can be used to make an app work with coop_server."
repository = "https://codeberg.org/flovansl/co_sl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coop_protocol = { path = "../coop_protocol", default-features = false }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
tokio-unix-ipc = "0.3"
ipc-rpc = "1.2"