# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "gallery"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
description = "Gallery for coop_widgets and book_flip."
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

[[bin]]
path = "src/main.rs"
name = "widgets"

[dependencies]
slint = { git = "https://github.com/slint-ui/slint.git", rev = "81bb6e2c70461fa54d64bf16060559b1d8ad28e0", default-features = false, features = ["compat-1-0"] }
mcu-board-support = { git = "https://github.com/slint-ui/slint", branch = "florian/mcu-test", optional = true }
slint_coop = { path = "../../platform_support/slint_coop", optional = true }

[build-dependencies]
slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "81bb6e2c70461fa54d64bf16060559b1d8ad28e0" }
book_flip = { path = "../../widgets/book_flip" }
coop_widgets = { path = "../../widgets/coop_widgets" }

[features]
# default = ["slint/default"]
default = ["slint/std", "slint/backend-winit", "slint/renderer-winit-femtovg", "slint/accessibility"]

# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/ #wasm# //" to generate the wasm build.

 #wasm# [lib]
 #wasm# crate-type = ["cdylib"]
 #wasm# path = "src/main.rs"

 #wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
 #wasm# wasm-bindgen = { version = "0.2" }
 #wasm# web-sys = { version = "0.3", features=["console"] }
 #wasm# console_error_panic_hook = "0.1.5"