# SPDX-FileCopyrightText: 2022 Florian Blasius <flovanpt@posteo.de>
# SPDX-License-Identifier: MIT

[package]
name = "gaming"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Example showing pico_engine and pico_ecs"
publish = false
repository = "https://codeberg.org/flovansl/co_sl"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0"] }
pico_engine = { path = "../../gaming/pico_engine", default-features = false }
pico_ecs = { path = "../../gaming/pico_ecs", default-features = false }

[build-dependencies]
slint-build = "0.3.1"

[features]
default = ["std"]
std = ["slint/default", "pico_engine/default", "pico_ecs/default"]

# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# crate-type = ["cdylib"]
#wasm# path = "main.rs"
#wasm#
#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"