# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "gaming"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Example showing pico_engine_ui"
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "gaming"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.4" }
pico_engine_rs = { path = "../../gaming/pico_engine_rs" }
embedded-graphics = "0.7.1"

[build-dependencies]
slint-build = { version = "0.3.4" }
pico_engine_ui = { path = "../../gaming/pico_engine_ui", default-features = false }



# Remove the `#wasm#` to uncomment the wasm build.
# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# crate-type = ["cdylib"]
#wasm# path = "main.rs"
#wasm#
#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"