# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "pico_os"
version = "0.1.0"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
edition = "2021"
build = "build.rs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0"] }
mcu-board-support = { git = "https://github.com/slint-ui/slint", branch = "florian/mcu-test", optional = true }

[build-dependencies]
slint-build = "0.3.1"
co_widgets = { path = "../../widgets/co_widgets" }

[features]
default = ["slint/default"]