[package]
name = "platform_support"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Example showing platform supports"
publish = false
repository = "https://codeberg.org/flovansl/slint_extensions"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0"] }
slint_psp = { path = "../../platform_support/slint_psp", optional = true }
slint_redox = { path = "../../platform_support/slint_redox", optional = true }

[build-dependencies]
slint-build = "0.3.1"

[features]
psp = ["slint_psp", "slint/unsafe-single-threaded", "slint/libm" ]
redox = ["slint_psp", "slint/unsafe-single-threaded" ]

