[package]
name = "widgets"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Example uusign book_flip and co_widgets"
publish = false
repository = "https://codeberg.org/flovansl/slint_extensions"

[[bin]]
path = "src/main.rs"
name = "widgets"


[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0"] }
mcu-board-support = { git = "https://github.com/slint-ui/slint", branch = "florian/mcu-test", optional = true }

[build-dependencies]
slint-build = { version = "0.3.1" }

[features]
default = ["slint/default"]

# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/#wasm# //" to generate the wasm build.

#wasm# [lib]
#wasm# crate-type = ["cdylib"]
#wasm# path = "main.rs"
#wasm#
#wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
#wasm# wasm-bindgen = { version = "0.2" }
#wasm# web-sys = { version = "0.3", features=["console"] }
#wasm# console_error_panic_hook = "0.1.5"