# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "widgets"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
description = "Example uusign book_flip and coop_widgets"
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

[[bin]]
path = "src/main.rs"
name = "widgets"

[dependencies]
slint = { version = "1.1.0", default-features = false, features = ["compat-1-0"] }
mcu-board-support = { git = "https://github.com/slint-ui/slint", branch = "florian/mcu-test", optional = true }
slint_coop = { path = "../../platform_support/slint_coop", optional = true }

[build-dependencies]
slint-build = { version = "1.1.0" }
book_flip = { path = "../../widgets/book_flip" }
coop_widgets = { path = "../../widgets/coop_widgets" }

[features]
default = ["slint/default"]

# This is commented out by default because we don't want to build it as a library by default
# The CI has a script that does sed "s/ #wasm# //" to generate the wasm build.

 #wasm# [lib]
 #wasm# crate-type = ["cdylib"]
 #wasm# path = "src/main.rs"

 #wasm# [target.'cfg(target_arch = "wasm32")'.dependencies]
 #wasm# wasm-bindgen = { version = "0.2" }
 #wasm# web-sys = { version = "0.3", features=["console"] }
 #wasm# console_error_panic_hook = "0.1.5"