# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "widgets_psp"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2021"
license = "MIT"
build = "build.rs"
publish = false

[dependencies]
slint = { version = "0.3.2", default-features = false, features = ["compat-0-3-0", "unsafe-single-threaded", "libm"] }
psp = { version = "=0.3.1", optional = true }
slint_psp = { path = "../../platform_support/slint_psp", optional = true }

[build-dependencies]
slint-build = "0.3.2"

[features]
default = ["psprust"]
simulator = ["slint/renderer-winit-software", "slint/backend-winit"]
psprust = [
    "slint/unsafe-single-threaded",
    "slint/libm",
    "psp",
    "slint_psp"
]

[profile.dev]
opt-level = "z"
overflow-checks = false