[package]
name = "pico_ecs"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Experimental Entity Component System library for no_std enviroments"
repository = "https://codeberg.org/flovansl/slint_extensions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []