[package]
name = "pico_engine"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Experimental game engine for Slint"
repository = "https://codeberg.org/flovansl/slint_extensions"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.0", default-features = false, features = ["compat-0-3-0"] }

[build-dependencies]
slint-build = "0.3.0"

[features]
default = ["std"]
std = ["slint/default"]
