# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "pico_engine_ui"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Slint ui components used for the pico engine."
repository = "https://codeberg.org/flovansl/coop_sl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.4" }

[build-dependencies]
slint-build = { version = "0.3.4" }
coop_widgets = { path = "../../widgets/coop_widgets" }
