# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Internal shared references"
publish = false
repository = "https://codeberg.org/flovansl/co_sl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0"] }

[build-dependencies]
slint-build = "0.3.1"

[features]
default = ["std"]
std = ["slint/default"]
