# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "shared"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Internal shared references"
publish = false
repository = "https://codeberg.org/flovansl/coop_sl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.1.0", default-features = false, features = ["compat-1-0"] }

[build-dependencies]
slint-build = { version = "1.1.0" }
[features]
default = ["std"]
std = ["slint/default"]
