# SPDX-FileCopyrightText: 2022 Florian Blasius <flovanpt@posteo.de>
# SPDX-License-Identifier: MIT

[package]
name = "slint_orbclient"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Slint platform support for Redox"
repository = "https://codeberg.org/flovansl/co_sl"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint =  { version = "0.3.1", default-features = false, features = ["compat-0-3-0", "unsafe-single-threaded", "libm"] }
orbclient = { version = "0.3.34" }
once_cell = "1.16.0"
instant = "0.1"