[package]
name = "slint_rpi_pico"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "0.3.1", default-features = false, features = ["compat-0-3-0", "libm", "unsafe-single-threaded"] }
rp-pico = { version = "0.5" }
cortex-m = { version = "0.7.6" }
cortex-m-rt = {version = "0.7.1" }
alloc-cortex-m = { version = "0.4.2" }
st7789 = { version = "0.7" }
shared-bus = { version = "0.2.4" }
panic-halt = { version = "0.2.0" }
display-interface-spi = { version = "0.4.1" }
embedded-graphics-core = { version = "0.3.3" }
embedded-hal = {version = "0.2.7" }
fugit = { version = "0.3.6" }

[build-dependencies]
slint-build = { version = "0.3.1" }