[package]
name = "co_widgets"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
license = "MIT"
description = "Custom widget library for Slint"
repository = "https://codeberg.org/flovansl/co"
readme = "README.md"
build = "build.rs"

[build-dependencies]
slint-build = "0.3.1"