# SPDX-FileCopyrightText: 2022 Florian Blasius <co_sl@tutanota.com>
# SPDX-License-Identifier: MIT

[package]
name = "coop_widgets"
version = "0.1.0"
edition = "2021"
authors = ["Florian Blasius <co_sl@tutanota.com>"]
license = "MIT"
description = "Custom widget library for Slint"
repository = "https://codeberg.org/flovansl/coop_sl"
readme = "README.md"
build = "build.rs"

# [build-dependencies]
# slint-build = { git = "https://github.com/slint-ui/slint.git", rev = "9edd8d1dce7d2fdaea65d275dd3bdafe40a3a3bd" }
